--- a/index.html
+++ b/index.html
@@ -1,1 +1,95 @@
-index.html
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Responsive-pratt</title>
+<!-- Viewport -->
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <!-- CSS -->
+    <link href="css/main.css" rel="stylesheet">
+    <!-- Font Awesome -->
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+
+</head>
+<body>
+    <!-- navbar -->
+    <section>
+        <header>
+            <nav class="navbar navbar-fixed-top">
+                <nav class="navbar navbar-default">
+                    <div class="container">
+                        <!-- Brand and toggle get grouped for better mobile display NO TOCAR-->
+                        <div class="navbar-header">
+                            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                                    <span class="sr-only">Toggle navigation</span>
+                                    <span class="icon-bar"></span>
+                                    <span class="icon-bar"></span>
+                                    <span class="icon-bar"></span>
+                                </button>
+                            <!-- LOGO PRATT-->
+                            <a class="navbar-brand" href="#">Pratt</a>
+                        </div>
+                        <!-- Collect the nav links, forms, and other content for toggling -->
+                        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                            <ul class="nav navbar-nav navbar-right">
+                                <li><a href="#">Home</a></li>
+                                <li><a href="#">Description</a></li>
+                                <li class="active"><a href="#">Showcase</a></li>
+                                <li><a href="#">Contact</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </nav>
+            </nav>
+        </header>
+    </section>
+        <!--SECTION 1-->
+    <section class="section-one">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 text-center">
+                    <h1>Welcome To <b>Pratt</b></h1>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 text-center">
+                    <h2>Show you product with this handome theme.</h2>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 text-center">
+                    <img src="assets/img/app-bg.png" alt="">
+                </div>
+            </div>
+        </div>
+    </section>
+        <!--SECTION 2-->
+    <section class="section-two">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 text-center">
+                    <h2>Designed To Excel </h2>
+                </div>
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 designed">
+                    <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 text-center">
+                        <img src="assets/img/intro01.png" alt="Mensaje">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium eligendi quos ut magni, blanditiis modi praesentium esse quidem quam ex omnis iste expedita nulla a rerum libero labore suscipit! Pariatur.</p>
+                    </div>
+                    <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 text-center">
+                        <img src="assets/img/intro02.png" alt="Calendario">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium eligendi quos ut magni, blanditiis modi praesentium esse quidem quam ex omnis iste expedita nulla a rerum libero labore suscipit! Pariatur.</p>
+                    </div>
+                    <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 text-center">
+                        <img src="assets/img/intro03.png" alt="Pantalla">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium eligendi quos ut magni, blanditiis modi praesentium esse quidem quam ex omnis iste expedita nulla a rerum libero labore suscipit! Pariatur.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+</body>
+</html>
