--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <!-- CSS -->
     <link href="css/main.css" rel="stylesheet">
+    <link href="css/media.css" rel="stylesheet"
     <!-- Font Awesome -->
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 
@@ -57,13 +58,17 @@
             </div>
             <div class="row">
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 text-center">
-                    <h2>Show you product with this handome theme.</h2>
+                    <h2 class="text-white">Show you product with this handome theme.</h2>
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 text-center">
-                    <img src="assets/img/app-bg.png" alt="">
+                <div class="col-lg-offset-1 col-lg-12 col-md-12 col-sm-12 col-xs-12 text-center">
+                    <img src="assets/img/app-bg.png" alt="app" class="img-responsive">
                 </div>
+            </div>
+            <div class="oculto-only-mobile">
+                <h3 class="white-text">Awesome Design</h3>
+                <p class="white-text">Lorem Ipsum is simply dummpy text of the printing and typesetting insutry.</p>
             </div>
         </div>
     </section>
@@ -77,19 +82,100 @@
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 designed">
                     <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 text-center">
                         <img src="assets/img/intro01.png" alt="Mensaje">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium eligendi quos ut magni, blanditiis modi praesentium esse quidem quam ex omnis iste expedita nulla a rerum libero labore suscipit! Pariatur.</p>
+                        <h3>Community</h3>
+                        <p>Lorem Ipsum is simply dummpy text of the printing and typesetting insutry.</p>
                     </div>
                     <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 text-center">
                         <img src="assets/img/intro02.png" alt="Calendario">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium eligendi quos ut magni, blanditiis modi praesentium esse quidem quam ex omnis iste expedita nulla a rerum libero labore suscipit! Pariatur.</p>
+                        <h3>Schedule</h3>
+                        <p>Lorem Ipsum is simply dummpy text of the printing and typesetting insutry.</p>
                     </div>
                     <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 text-center">
                         <img src="assets/img/intro03.png" alt="Pantalla">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium eligendi quos ut magni, blanditiis modi praesentium esse quidem quam ex omnis iste expedita nulla a rerum libero labore suscipit! Pariatur.</p>
+                        <h3>Monitoring</h3>
+                        <p>Lorem Ipsum is simply dummpy text of the printing and typesetting insutry.</p>
+                    </div>
+                </div>
+            </div>
+                <hr>
+        </div>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 text-center">
+                    <h2>What's New? </h2>
+                </div>
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                    <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+                        <img src="assets/img/mobile.png" alt="mobile" class="img-responsive app">
+                    </div>
+                    <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+                        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                            <h3>Some Features</h3>
+                        </div>
+                        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                            <h4 class="verde-section-2">First Class Design</h4>
+                            <p>It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Impsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Impsum.</p>
+                        </div>
+                        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                            <h4 class="verde-section-2">Retina Ready Theme</h4>
+                        </div>
+                        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                            <h4 class="verde-section-2">Awesome Support</h4>
+                        </div>
+                        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                            <h4 class="verde-section-2">Responsive Design</h4>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </section>
+        <!--SECTION 3 -->
+    <section class="section-third">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 text-center">
+                    <h3>Some Screenshots</h3>
+                </div>
+                <div class="col-lg-offset-1 col-lg-12 col-md-12 col-sm-12 col-xs-12 text-center">
+                    <img src="assets/img/item-01.png" class="img-responsive img-pc-human" alt="">
+                </div>
+            </div>
+        </div>
+    </section>
+        <!--SECTION 4-->
+    <section class="section-four">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-5 col-md-5 col-xs-12 title-four">
+                    <h2 class="white-text ">Address</h2>
+                    <h5 class="white-text">Av. Greenville 987,</h5>
+                    <h5 class="white-text">New York,</h5>
+                    <h5 class="white-text">90873</h5>
+                    <h5 class="white-text">United States</h5>
+                </div>
+                <div class="col-lg-7 col-md-7 col-xs-12 title-four">
+                    <h2 class="white-text ">Drop Us A Line</h2>
+                    <div class="input-general">
+                        <label class="white-text" for="name">Your Name</label><br>
+                        <input id="name" class="input-texto" type="text" class="form-control" placeholder="Your Name"><br>
+                        <label class="white-text" for="email">Email address</label><br>
+                        <input id="email" class="input-texto" type="text" class="form-control" placeholder="Enter Email"><br>
+                        <label class="white-text" for="text">Your text</label><br>
+                        <textarea id="text-area" class="form-control" rows="3"></textarea><br>
+                        <button id="btn-submit" class="btn btn-default" type="submit">SUBMIT</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+        <!-- footer -->
+    <footer>
+        <p class="white-text">
+            Create by <span class="footer-span">GRUMPY.CO</span>
+        </p>
+    </footer>
+    <script type=" text/javascript " src="assets/js/main.js "></script>
 </body>
 </html>
